# federal-court-deadlines

./: README.md  pyproject.toml
notebook/: guideline.ipynb
notebooks/: Test-dl-Function.ipynb  dates.ipynb  guideline.ipynb  holidays.ipynb
src/deadlines/: canadian_holidays.py  dates.py  due_dates.py  enums.py  examples.py
tests/: test_find_year.py
tests/deadlines/canadian_holidays/: test_calcs.py  test_easter.py
tests/deadlines/dates/: test_dates.py  test_find_year.py
tests/deadlines/due_dates/: test_deadline.py
