[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federal-court-deadlines"
version = "0.0.5"
description = "A project for calculating Federal Court deadlines."
authors = [
    { name = "Arthur Ryman", email = "arthur.ryman@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "holidays>=0.69"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://agryman.github.io/"
"Documentation" = "https://agryman.github.io/"
"Issue Tracker" = "https://agryman.github.io/"

[tool.setuptools]
package-dir = {"" = "src"}    # Specifies that the packages are located in the 'src' directory

[tool.setuptools.packages.find]
where = ["src"]              # Search for packages in the 'src' directory
